<resources>
    <string name="app_name">Student\'s Buddy</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home_work">Home Work</string>
    <string name="notice">Notice</string>
    <string name="links_for_classes">Links for classes</string>
    <string name="recorded_lectures">Recorded Lectures</string>
    <string name="homework_appears_here">HomeWork Appears Here</string>
    <string name="english">English</string>
    <string name="math">Math</string>
    <string name="science">Science</string>
    <string name="english_homework_appears_here">English Homework Appears Here</string>
    <string name="notice_appears_here">Notice appears here</string>
    <string name="math_homework_appears_here">Math Homework Appears Here</string>
    <string name="science_homework_appears_here">Science Homework Appears Here</string>
    <string name="links_for_classes_appears_here">Links for classes Appears Here</string>
    <string name="links_for_recorded_lectures">Links for Recorded Lectures</string>
    <string name="name">Name</string>
    <string name="classes">Class</string>
    <string name="section">Section</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="roll_number">Roll Number</string>
    <string name="login">Login</string>
    <string name="select_class">Select Class</string>
    <string name="welcome_to_homework_buddy">Welcome to Homework Buddy</string>
    <string name="click_here_to_continue">Click here to continue</string>
    <string name="welcome_class_first">Welcome Class First</string>
    <string name="welcome_class_fifth">Welcome Class Fifth</string>
    <string name="welcome_class_fourth">Welcome Class Fourth</string>
    <string name="welcome_class_third">Welcome Class Third</string>
    <string name="welcome_class_2nd">Welcome Class 2nd</string>
    <string name="welcome_class_1st">Welcome Class 1st</string>
    <string name="welcome_class_5th">Welcome Class 5th</string>
    <string name="welcome_class_4th">Welcome Class 4th</string>
    <string name="welcome_class_3rd">Welcome Class 3rd</string>
    <string name="logout">LogOut</string>
    <string name="back">Back</string>
    <string name="no_notice_for_class_1st">No notice for Class 1st</string>
    <string name="no_notice_for_class_2nd">No Notice for Class 2nd</string>
    <string name="no_notice_for_class_3rd">No notice for Class 3rd</string>
    <string name="no_notice_for_class_5th">No Notice For Class 5th</string>
    <string name="no_english_homework_for_class_1st">No English HomeWork for Class 1st</string>
    <string name="no_english_homework_for_class_2nd">No English Homework For Class 2nd</string>
    <string name="no_english_homework_for_class_3rd">No English Homework For Class 3rd</string>
    <string name="no_english_homework_for_class_4th">No English Homework for Class 4th</string>
    <string name="no_english_homework_for_class_5th">No English Homework For Class 5th</string>
    <string name="no_math_homework_for_class_1st">No Math Homework for Class 1st</string>
    <string name="no_math_homework_for_class_2nd">No Math Homework For Class 2nd</string>
    <string name="no_math_homework_for_class_3rd">No Math Homework For Class 3rd</string>
    <string name="no_math_homework_for_class_5th">No Math Homework For Class 5th</string>
    <string name="no_science_homework_for_class_1st">No Science Homework For Class 1st</string>
    <string name="no_science_homework_for_class_3rd">No Science Homework For Class 3rd</string>
    <string name="no_scence_homework_for_class_4th">No Scence Homework For Class 4th</string>
    <string name="no_science_homework_for_class_5th">No Science Homework For Class 5th</string>
    <string name="no_recorded_lectures_available_for_class_1st">No Recorded Lectures Available For Class 1st</string>
    <string name="no_recorded_lectures_available_for_class_2nd">No Recorded Lectures Available For Class 2nd</string>
    <string name="no_recorded_lectures_available_for_class_3rd">No Recorded Lectures Available For Class 3rd</string>
    <string name="no_recorded_lectures_available_for_class_4th">No Recorded Lectures Available For Class 4th</string>
    <string name="no_recorded_lectures_available_for_class_5th">No Recorded Lectures Available For Class 5th</string>
    <string name="no_links_available_yet_for_class_1st">No Links Available Yet For Class 1st</string>
    <string name="no_links_available_yet_for_class_2nd">No Links Available Yet For Class 2nd</string>
    <string name="no_links_available_yet_for_class_3rd">No Links Available Yet For Class 3rd</string>
    <string name="no_links_available_yet_for_class_4th">No Links Available Yet For Class 4th</string>
    <string name="no_links_available_yet_for_class_5th">No Links Available Yet For Class 5th</string>
    <string name="no_science_homework_for_class_2nd">No Science Homework For Class 2nd</string>
    <string name="no_math_homework_for_class_4th">No Math Homework For Class 4th</string>
    <string name="no_notice_for_class_4th">No Notice for Class 4th</string>
    <string name="second">Second</string>
    <string name="first">First</string>
    <string name="fifth">Fifth</string>
    <string name="fourth">Fourth</string>
    <string name="third">Third</string>
    <string name="select_your_class">Select Your Class</string>
    <string name="startin_pic">Startin Pic</string>
    <string name="welcome_to_student_s_buddy">Welcome To Student\'s Buddy</string>
    <string name="starting_pic">Starting Pic</string>
    <string name="password">Password</string>
    <string name="password1">Password</string>
    <string name="password2">Password</string>
    <string name="password3">Password</string>
    <string name="password4">Password</string>

</resources>